docs: writing new systems documentation, refactoring doc structure

--- a/docs/_static/css/harp.css
+++ b/docs/_static/css/harp.css
@@ -37,3 +37,12 @@
 .sidebar-brand-text {
     text-align: center;
 }
+
+
+.intro,
+.intro table,
+.intro table tr,
+.intro table td {
+    border: none;
+    box-shadow: none;
+}
