--- a/docs/_static/css/harp.css
+++ b/docs/_static/css/harp.css
@@ -55,3 +55,11 @@ article[role=main] .graphviz {
 div.graphviz >object {
     margin: 0 auto;
 }
+
+#furo-main-content img.screenshot {
+    background-color: rgba(17, 24, 39, .05);
+    box-shadow: inset 0 0 0 0, inset 0 0 0 0.5px rgb(17 24 39 / 0.1);;
+    border-radius: 0.25rem;
+    padding: 0.1rem;
+
+}
