docs: dashboard settings reference

--- a/docs/_static/css/harp.css
+++ b/docs/_static/css/harp.css
@@ -89,6 +89,7 @@ div.graphviz > object {
 
 article table.docutils {
     margin-left: 0;
+    width: 100%;
 }
 
 article table.docutils td.align-top {
